--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
 <p class="p1"><span class="s1">&lt;div&gt; this is box &lt;/div&gt;</span></p>
 <p class="p1"><span class="s1">&lt;div&gt;a new version&lt;/div&gt;</span></p>
 <p class="p1"><span class="s1">Same forgotten line</span></p>
+  This line was added in github
 </body>
 </html>
