--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
 <head>
 <meta charset="UTF-8">
   <title>attempt at writing</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div> Good morning</div>
-<p class="p1"><span class="s1">hello world</span></p>
-<p class="p1"><span class="s1">&lt;div&gt; this is box &lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">&lt;div&gt;a new version&lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">Same forgotten line</span></p>
-  This line was added in github
+   <div class="content">
+       <div class="logo">
+       <p class="contact">
+           Наши контакты:<br>
+           +9-098-765-432<br>
+           +9-0123-456-890<br>
+           info@asia-holidays.com
+       </p>
+           <ul class="country">
+               <li><img src="img/in1.jpg">Индия</li>
+               <li><img src="img/in2.jpg">Непал</li>
+               <li><img src="img/in3.jpg">Тибет</li>
+               <li><img src="img/in4.jpg">Бутан</li>
+               <li><img src="img/in5.jpg">Шри-ланка</li>
+               <li><img src="img/in6.jpg">Мальдивы</li>
+           </ul>
+       </div>
+       <div class="photo">
+
+       </div>
+   </div>
+   <footer>
+      Copyright(C) asia-holidays.com. 2010
+   </footer>
 </body>
 </html>
