Add current changes
add current changes
/
:wq

--- a/index.html
+++ b/index.html
@@ -2,33 +2,201 @@
 <html>
 <head>
 <meta charset="UTF-8">
-  <title>attempt at writing</title>
+  <title>Holiday dreams</title>
   <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/maconry_load_img.js"></script>
+    <script src="js/jQery_corousel.js"></script>
+    <!--[if lt IE 9]>
+    <script src="js/masonry.pkgd.min.js"></script>
+    <script src="js/masonry_init.js"></script>
+    <script src="js/html5shiv.js"></script>
+  <![endif]-->
+
 </head>
 <body>
-   <div class="content">
-       <div class="logo">
-       <p class="contact">
-           Наши контакты:<br>
-           +9-098-765-432<br>
-           +9-0123-456-890<br>
-           info@asia-holidays.com
-       </p>
-           <ul class="country">
-               <li><img src="img/in1.jpg">Индия</li>
-               <li><img src="img/in2.jpg">Непал</li>
-               <li><img src="img/in3.jpg">Тибет</li>
-               <li><img src="img/in4.jpg">Бутан</li>
-               <li><img src="img/in5.jpg">Шри-ланка</li>
-               <li><img src="img/in6.jpg">Мальдивы</li>
-           </ul>
-       </div>
-       <div class="photo">
+ <div class="content">
+     <header class="header clearfix">
+         <div class="login_area">
+             <a href="#"> Log in </a><a href="#" class="singup"> Sign Up </a>
+         </div>
+
+         <h1>URLAUBSGLÜCK</h1>
+
+         <div class="promo">
+
+             <h2> Share your<br> holiday dreams </h2>
+             <h3> And find the perfect partner to fullfill it </h3>
+             <div  class="findButton"><a href="#" > Find your holiday partner </a></div>
+
+         </div>
+
+     </header>
+
+     <section class="how_it_works">
+       <h1>How Urlaubsglück works?</h1>
+       <div class="carousel_wrapper clearfix">
+           <div class="wrapper_block" id="leftBlock">
+
+               <ul class="slide_step">
+                 <li class="one">
+                     <span>
+                         <a href="#" class="step_link">Step 1</a>
+                         <h2>Sed leo enim, condimentum</h2>
+                         <p>Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                     </span>
+                 </li>
+                 <li class="two">
+                     	<span>
+                            <a href="#" class="step_link">Step 2</a>
+                            <h2>Morbi velit risus</h2>
+                            <p>Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+			            </span>
+                 </li>
+                 <li class="three">
+                     <span>
+                         <a href="#" class="step_link">Step 3</a>
+                         <h2>Sed leo enim, condimentum</h2>
+                         <p>Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+			            </span>
+                 </li>
+              </ul>
+               <div class="arrow left"></div>
+               <div class="arrow right"></div>
+           </div>
+        <div class="wrapper_block" id="centralBlock">
+            <ul class="slide_step">
+                <li class="one">
+                     <span>
+                         <a href="#" class="step_link">Step 1</a>
+                         <h2>Sed leo enim, condimentum</h2>
+                         <p>Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                     </span>
+                </li>
+                <li class="two">
+                     	<span>
+                            <a href="#" class="step_link">Step 2</a>
+                            <h2>Morbi velit risus</h2>
+                            <p>Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+			            </span>
+                </li>
+                <li class="three">
+                     <span>
+                         <a href="#" class="step_link">Step 3</a>
+                         <h2>Sed leo enim, condimentum</h2>
+                         <p>Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+			            </span>
+                </li>
+            </ul>
+            <div class="arrow left"></div>
+            <div class="arrow right"></div>
+
+          </div>
+
+          <div class="wrapper_block" id="rightBlock">
+              <ul class="slide_step">
+                  <li class="one">
+                     <span>
+                         <a href="#" class="step_link">Step 1</a>
+                         <h2>Sed leo enim, condimentum</h2>
+                         <p>Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+                     </span>
+                  </li>
+                  <li class="two">
+                     	<span>
+                            <a href="#" class="step_link">Step 2</a>
+                            <h2>Morbi velit risus</h2>
+                            <p>Nulla venenatis tempor dui in molestie. Nulla quis dictum purus, sit amet porttitor est.</p>
+			            </span>
+                  </li>
+                  <li class="three">
+                     <span>
+                         <a href="#" class="step_link">Step 3</a>
+                         <h2>Sed leo enim, condimentum</h2>
+                         <p>Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</p>
+			            </span>
+                  </li>
+              </ul>
+              <div class="arrow left"></div>
+              <div class="arrow right"></div>
+
+          </div>
+
+
 
        </div>
-   </div>
-   <footer>
-      Copyright(C) asia-holidays.com. 2010
-   </footer>
+
+
+     </section>
+
+     <section class="partners">
+       <h1>Meet a partner for your best holiday</h1>
+         <div>
+           <figure>
+              <img src="img/partner1.jpg" alt="Bradley Hunter">
+              <span class="TVIc"></span>
+              <h2><a href="#">Bradley Hunter</a></h2>
+               <figcaption> Based in Chicago. I love playing tennis and loud music.</figcaption>
+           </figure>
+           <figure>
+              <img src="img/partner2.jpg" alt="Heather Walker">
+              <span class="BottleIc"></span>
+               <h2><a href="#">Heather Walker</a></h2>
+               <figcaption>I'm a happy person that loves cats and climbing on mountains. </figcaption>
+           </figure>
+           <figure>
+               <img src="img/partner3.jpg" alt="Lucas Marsha">
+               <span class="CupIc"></span>
+               <h2><a href="#">Lucas Marsha</a></h2>
+               <figcaption> I get my inspiration from nature and objects around me. I have a passion to colours, typography and skateboards.</figcaption>
+           </figure>
+           <figure>
+               <img src="img/partner4.jpg" alt="Bradley Hunter">
+               <span class="PlaneIc"></span>
+               <h2><a href="#">Bradley Hunter</a></h2>
+               <figcaption> Based in Chicago. I love playing tennis and loud music. </figcaption>
+           </figure>
+         </div>
+     </section>
+
+
+     <section class="ideas clearfix">
+         <h1>Discover holiday activity ideas</h1>
+       <div class="grid-conteiner">
+         <div class="grid">
+
+         </div>
+       </div>
+
+      </section>
+
+     <div class="search_partners">
+        <h1> Discover holiday activity ideas </h1>
+         <form action="index.html">
+             <p>Hi! What are your holiday interests?</p>
+             <input type="text"  placeholder="Enter your interests" id="seachInput">
+             <input class="form_button" type="button" value="Search partners">
+         </form>
+
+     </div>
+     <footer class="footer_container">
+           <h1> URLAUBSGLÜCK </h1>
+           <nav class="nav_links">
+               <h2> Company </h2><br>
+               <a href="#"> About </a>
+               <a href="#"> Contacts </a>
+               <a href="#"> Press </a>
+               <a href="#"> Blog </a>
+           </nav>
+           <h2 class="partners">
+               <a href="#"> Partners </a>
+           </h2>
+           <div class="disignedBy">
+                 <h3>Disigned By</h3>
+                 <a href="#" class="footer_img"><img src="img/footer.png"></a>
+           </div>
+     </footer>
+
+</div>
 </body>
 </html>
