--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <meta charset="UTF-8">
   <title>Holiday dreams</title>
   <link rel="stylesheet" href="css/style.css">
-    <script src="js/jquery-3.1.1.min.js"></script>
+   <script src="js/built/script.main.js" ></script>
+   <!-- <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/maconry_load_img.js"></script>
-    <script src="js/jQery_corousel.js"></script>
-    <!--[if lt IE 9]>
-    <script src="js/masonry.pkgd.min.js"></script>
-    <script src="js/masonry_init.js"></script>
-    <script src="js/html5shiv.js"></script>
-  <![endif]-->
+    <script src="js/jQery_corousel.js"></script> -->
+
+    <!--[if lt IE 9]> -->
+ <!--   <script src="js/Exceptions/masonry.pkgd.min.js"></script>
+    <script src="js/Exceptions/masonry_init.js"></script>
+    <script src="js/Exceptions/html5shiv.js"></script>
+  <!--[endif]-->
 
 </head>
 <body>
